tests/agl/programs/errors/rethrow_nested.agl
# Nested try, rethrow with `raise e`, binderless catch, and an exception that no
# clause matches propagating out of the program.
param mode

try
  try
    if mode = "inner" =>
      raise Abort(message: "from inner")
    | else =>
      pass
    print "inner ok"
  catch Abort as e =>
    print "inner saw ${e.message}"
    raise e
catch Abort =>
  print "outer saw abort"
print "continue"

try
  raise Abort(message: "fatal ${mode}")
catch MatchError =>
  print "wrong handler"
